objects/WT_Company_Information__c.object
<CustomObject>
    <description>Custom entity which is related to Business Accounts.</description>
    <fields>
        <fullName>WT_Information_Type__c</fullName>
        <label>Information Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>History/Background Notes</fullName>
                </value>
                <value>
                    <fullName>Niche Market Data Notes</fullName>
                </value>
                <value>
                    <fullName>Industry Notes</fullName>
                </value>
                <value>
                    <fullName>Customer Notes</fullName>
                </value>
                <value>
                    <fullName>Supplier Notes</fullName>
                </value>
                <value>
                    <fullName>Building Ownership Notes</fullName>
                </value>
                <value>
                    <fullName>Capital Expenditure Plan</fullName>
                </value>
                <value>
                    <fullName>Succession Plan Notes</fullName>
                </value>
                <value>
                    <fullName>Import Export Notes</fullName>
                </value>
                <value>
                    <fullName>Current Issues</fullName>
                </value>
                <value>
                    <fullName>Risks in Business</fullName>
                </value>
                <value>
                    <fullName>NFP Affiliations</fullName>
                </value>
                <value>
                    <fullName>Hobbies or Special Interests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.WT_Account_Record_Type__c</field>
                <operation>contains</operation>
                <value>Business Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Informations</relationshipLabel>
        <relationshipName>Company_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Company Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>WT_Information_Type__c</columns>
        <columns>WT_Notes__c</columns>
        <columns>WT_Related_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Note-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>